# client_rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: auth.rs  instance.rs  launcher.rs  main.rs
ui/: Logic.slint  app-window.slint  create-instance.slint  logic.slint  login-page.slint  login.slint  select-instance.slint
ui/components/: select-instance-button.slint  top-bar.slint
